--- a/map_index.html
+++ b/map_index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="https://cdn.conversejs.org/7.0.4/dist/converse.min.css">
+    <script src="https://cdn.conversejs.org/7.0.4/dist/converse.min.js" charset="utf-8"></script>
     <style>
         #map {
             height:800px;
@@ -50,8 +52,14 @@
     <div id="map"></div>
     <script src="./google_map_scripts.js"></script>
     <script defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8kiJDYIw5V4SSS08etcWL9QOyrkBkzpw&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=${API_KEY}&callback=initMap">
     </script>
 </div>
 </body>
+<script>
+    converse.initialize({
+        bosh_service_url: 'https://conversejs.org/http-bind/', // Please use this connection manager only for testing purposes
+        show_controlbox_by_default: true
+    });
+</script>
 </html>
